test/errors/call_starred_generator_argument.py
b = [1]
value(*x for x in b)
