test/errors/call_starred_generator_argument.py.expected
test/errors/call_starred_generator_argument.py:2 error: starred expression not allowed here
